--- a/sistema_config/sistemaEducacion/Templates/index.html
+++ b/sistema_config/sistemaEducacion/Templates/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block contenido %}
 
+
+
 <!--Titulo Nombre Colegio-->
 <div>
     <h1 class="tituloCole">Colegio X</h1>
@@ -10,7 +12,7 @@
 <!--Imagen del colegio-->
 <div class="contenedorImg">
     <div class="contenido">
-        <img class="imgCole" src="{% static 'img/escuela.png' %}" alt="Imagen Colegio" >
+        <img class="imgCole" src="{% static 'img/Puente-alto.png' %}" alt="Imagen Colegio">
     </div>
 </div>
 
@@ -18,14 +20,9 @@
 <!--Informacion del colegio-->
 <div class="informacionCole">
     <h2 class="acerca">Sobre Nosotros</h2>
-    <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro voluptate saepe ratione maxime
-        suscipit veritatis
-        omnis? Tempora saepe officiis cumque illum consequuntur aliquid placeat. Nesciunt asperiores architecto atque
-        voluptates quaerat Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum voluptatibus deserunt
-        quaerat quo voluptas non tempore rerum, ad, quasi perferendis mollitia soluta magnam expedita nemo aliquid
-        temporibus? Dignissimos, officia dicta Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus nulla
-        molestiae enim harum dignissimos quis quaerat quo commodi? Quasi, obcaecati in illum reiciendis minus totam
-        sequi a repudiandae et architecto!</p>
+    <h5 class="info">Formamos personas, en el ámbito técnico y profesional, con una sólida base ética inspirada en los
+        valores cristianos, capaces de aportar en forma significativa al mundo laboral y comprometidas con el desarrollo
+        de la sociedad.</h5>
 </div>
 
 
@@ -35,7 +32,10 @@
     <div class="row row-cols-1 row-cols-md-4 g-5 eventos">
         <div class="col">
             <div class="card h-100">
-                <iframe height="350" src="https://www.youtube.com/embed/N1d6AGSZWz0?si=CRKWYXjBJQCIXF3_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="frame" height="350" src="https://www.youtube.com/embed/N1d6AGSZWz0?si=CRKWYXjBJQCIXF3_"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
         <div class="col">
@@ -55,4 +55,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
