Ejemplo (no tomar en cuenta)

--- a/sistema_config/sistemaEducacion/Templates/Profesor/sistema_Profe.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/sistema_Profe.html
@@ -19,7 +19,7 @@
           <h5>8vo B | Profesor: Profesor asignado en un futuro</h5>
           <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
           <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
-          <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificars Alumnos</a>
         </div>
       </div>
       <div class="curso" >
