--- a/sistema_config/sistemaEducacion/Templates/base.html
+++ b/sistema_config/sistemaEducacion/Templates/base.html
@@ -16,10 +16,11 @@
     crossorigin="anonymous"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.1/main.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.1/main.min.js"></script>
+  <link rel="icon" href="{% static 'img/educacion.png' %}">
   <link rel="stylesheet" href="{% static 'css/disenio.css' %}">
   <link rel="stylesheet" href="{% static 'css/disenioalterno.css' %}">
   <link rel="stylesheet" href="{% static 'css/disenioplan.css' %}">
-  <title>Base</title>
+  <title>Colegio X</title>
 </head>
 
 <body>
@@ -118,7 +119,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2020 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      <a class="text-white" href="">InformaTec</a>
     </div>
     <!-- Copyright -->
   </footer>
