--- a/sistema_config/sistemaEducacion/Templates/iniciar_sesion.html
+++ b/sistema_config/sistemaEducacion/Templates/iniciar_sesion.html
@@ -2,7 +2,28 @@
 {% load static %}
 {% block contenido %}
 
-
+<div class="preparando">
+    <div class="contenedorSes">
+        <h4 style="text-align: center; margin-top: 2%;">Iniciar Sesion</h4>
+        <form method="POST" class="formularioSes">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Usuario</label>
+                <input style="border: 1px solid black;" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ejemplo: Manuel">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
+                <input style="border: 1px solid black;" type="password" class="form-control" id="exampleFormControlInput1" placeholder="Contraseña"></input>
+            </div>
+            <div style="text-align: center;">
+                <a href="" style="text-decoration: none; color: rgb(0, 0, 0);">¿Olvidaste tu contraseña?</a>
+            </div>
+            <div style="text-align: center; margin-top: 4%;">
+                <button type="submit" class="btn btn-primary">Inicar Sesion</button>
+            </div>
+        </form>
+    </div>
+</div>
 
 
 {% endblock %}
