--- a/sistema_config/sistemaEducacion/Templates/Profesor/clase.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/clase.html
@@ -3,6 +3,30 @@
 {% block contenido %}
 
 
-
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-xl-8" style="border-right: 3px solid  black;">
+        <h1 class="titCurso" style="text-align: center;">8vo | Profesor Asignado</h1>
+        <div class="curso" >
+            <div id="interiorCurso" >
+              <h5 style="text-align: center; margin: 10%;">Planificacion</h5>
+            </div>
+          </div>
+          <div class="curso" >
+            <div id="interiorCurso" >
+              <h5 style="text-align: center; margin: 10%;">Notificar Evento</h5>
+            
+            </div>
+          </div>    
+        
+      </div>
+      <div class="col-md-4 d-none d-xl-block">
+        <h2 class="titCurso" style="text-align: center; margin-bottom: 6%;">Lista Estudiantes</h2>
+        </div>
+    </div>
+  </div>
+  
+  
+  
 
 {% endblock %}
