--- a/sistema_config/sistemaEducacion/Templates/Profesor/sistema_Profe.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/sistema_Profe.html
@@ -6,53 +6,64 @@
   <div class="row">
     <div class="col-xl-8" style="border-right: 3px solid  black;">
       <h1 class="titCurso" style="text-align: center;">Cursos</h1>
-      <div class="curso" >
-        <div id="interiorCurso" >
+      <div class="curso">
+        <div id="interiorCurso">
           <h5>8vo A | Profesor: Profesor asignado en un futuro</h5>
-          <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
-          <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
-          <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          <div class="btn-group d-flex justify-content-center">
+            <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
+            <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
+            <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          </div>
         </div>
       </div>
-      <div class="curso" >
+      <div class="curso">
         <div id="interiorCurso">
           <h5>8vo B | Profesor: Profesor asignado en un futuro</h5>
-          <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
-          <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
-          <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          <div class="btn-group d-flex justify-content-center">
+            <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
+            <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
+            <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          </div>
         </div>
       </div>
-      <div class="curso" >
+      <div class="curso">
         <div id="interiorCurso">
           <h5>8vo C | Profesor: Profesor asignado en un futuro</h5>
-          <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
-          <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
-          <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          <div class="btn-group d-flex justify-content-center">
+            <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
+            <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
+            <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          </div>
         </div>
       </div>
       <div class="curso">
         <div id="interiorCurso">
           <h5>7mo A | Profesor: Profesor asignado en un futuro</h5>
-          <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
-          <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
-          <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          <div class="btn-group d-flex justify-content-center">
+            <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
+            <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
+            <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          </div>
         </div>
       </div>
       <div class="curso">
         <div id="interiorCurso">
           <h5>7mo B | Profesor: Profesor asignado en un futuro</h5>
-          <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
-          <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
-          <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          <div class="btn-group d-flex justify-content-center">
+            <a href="{% url 'planificar' %}" type="button" class="btn" id="btnCurso">Planificar Clase</a>
+            <a href="{% url 'clase' %}" type="button" class="btn" id="btnCurso">Iniciar Clase</a>
+            <a href="{% url 'calificar' %}" type="button" class="btn" id="btnCurso">Calificar Alumnos</a>
+          </div>
         </div>
       </div>
-      
+
     </div>
-    <div class="col-md-4 d-none d-xl-block">
+    <div class="col-md-4">
       <h2 class="titCurso" style="text-align: center; margin-bottom: 6%;">Calendario</h2>
       <iframe
         src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23ffffff&ctz=America%2FSantiago&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&showTz=0&showCalendars=0"
-        style="border-width:0; border-radius: 10px;" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+        style="border-width:0; border-radius: 10px;" width="100%" height="500px" frameborder="0"
+        scrolling="no"></iframe>
     </div>
   </div>
 </div>
