--- a/sistema_config/sistemaEducacion/Templates/base.html
+++ b/sistema_config/sistemaEducacion/Templates/base.html
@@ -56,6 +56,9 @@
               <a class="nav-link" href="{% url 'sistema_Profe' %}">Sistema</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'apoderado' %}">Apoderado</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'iniciar_sesion' %}">Iniciar Sesión</a>
             </li>
           </ul>
