--- a/sistema_config/sistemaEducacion/Templates/Apoderados_Alumnos/apoderado.html
+++ b/sistema_config/sistemaEducacion/Templates/Apoderados_Alumnos/apoderado.html
@@ -4,7 +4,11 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4" style="border-right: 3px solid  black;">
-            <h1 class="titCurso" style="text-align: center;">Calendario</h1>
+            <h1 class="titCurso" style="text-align: center;">Curso: 8vo A</h1>
+            <hr style="border: 1px solid black;">
+            <h6>Profesor Jefe: Francisco Juillet  </h6>
+            <h6>Asignatura: Educacion Fisica</h6>
+            <hr style="border: 1px solid black;">
             <iframe
                 src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23ffffff&ctz=America%2FSantiago&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&showTz=0&showCalendars=0"
                 style="border-width:0; border-radius: 10px;" width="100%" height="500px" frameborder="0" scrolling="no">
