--- a/sistema_config/sistemaEducacion/Templates/base.html
+++ b/sistema_config/sistemaEducacion/Templates/base.html
@@ -60,7 +60,10 @@
               <a class="nav-link" href="{% url 'sistema_Profe' %}">Sistema</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'apoderado' %}">Apoderado</a>
+              <a class="nav-link" href="{% url 'apoderado' %}">Apoderado-Alumno</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'Admin' %}">Administracion</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'iniciar_sesion' %}">Iniciar Sesión</a>
