--- a/sistema_config/sistemaEducacion/Templates/base.html
+++ b/sistema_config/sistemaEducacion/Templates/base.html
@@ -63,7 +63,7 @@
               <a class="nav-link" href="{% url 'apoderado' %}">Apoderado-Alumno</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'Admin' %}">Administracion</a>
+              <a class="nav-link" href="{% url 'admin_apoderado' %}">Administracion</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'iniciar_sesion' %}">Iniciar Sesión</a>
