--- a/sistema_config/sistemaEducacion/Templates/base.html
+++ b/sistema_config/sistemaEducacion/Templates/base.html
@@ -29,8 +29,7 @@
 
 <body>
   <!--Navegador-->
-  <nav class="navbar navbar-expand-lg"
-    style="background-color: rgba(132, 196, 241, 0); border-bottom: 1px solid black;">
+  <nav class="navbar navbar-expand-lg bg-dark " data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="">
         <!-- Esta linea indica que si estamos en el home el nombre del colegio no se mostrara mientras que en las otras vistas si -->
@@ -89,7 +88,7 @@
 
 
   <!-- Footer -->
-  <footer class="bg-light text-center text-white ">
+  <footer class="bg-dark text-center text-white ">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
