--- a/sistema_config/sistemaEducacion/Templates/Profesor/planificar.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/planificar.html
@@ -25,11 +25,11 @@
                         <textarea class="form-control shadow" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Actividad 2</label>
+                        <label for="exampleFormControlTextarea1" class="form-label">Semana 2</label>
                         <textarea class="form-control shadow" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Actividad 3</label>
+                        <label for="exampleFormControlTextarea1" class="form-label">Semana 3</label>
                         <textarea class="form-control shadow" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                 </div>
